// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateOpinion /> when the query is on desktop should render a FOR opinion 1`] = `
<div
  className="sc-bdnxRM eMovSv DebateOpinion___StyledCard-dZwepn cgdJna"
>
  <div
    className="sc-bdnxRM Tag__TagInner-bjwVBq Tag___StyledTagInner-cdSrrS bjKNvb hBLRKx cguwDa DebateOpinion___StyledTag-dFitVd brwjZN"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    title=""
  >
    <p
      className="sc-bdnxRM ffkNxr Tag___StyledText-hGgPZv bchNbO"
    >
      <span
        className="sc-bdnxRM dClQKr"
      >
        opinion.for
      </span>
    </p>
  </div>
  <div
    className="sc-bdnxRM DebateOpinion___StyledAppBox-iqiyXL bulKA-D ereNse"
  />
  <div
    className="sc-bdnxRM Flex___StyledAppBox-RSPpX dRGDei"
  >
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX bzrQcx cPNXGW"
    >
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX bCAVYp Avatar__AvatarInner-chaUKm grFDLb"
        style={
          Object {
            "background": "#2d867a",
            "color": undefined,
          }
        }
      >
        <img
          alt="Agui le penseur"
          className="sc-bdnxRM Avatar___StyledAppBox-jLrEWR gYudlT kOoGOC"
          src="<mock-value-for-field-\\"url\\">"
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX bHyrFO"
      >
        <p
          className="sc-bdnxRM kXjGxJ"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdnxRM fusnfN"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX bHyrFO cDRBxz"
    >
      <h4
        className="sc-bdnxRM gPFhMB"
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdnxRM isZYbz"
      >
        <div
          className=" ql-editor"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`<DebateOpinion /> when the query is on desktop should render an AGAINST opinion 1`] = `
<div
  className="sc-bdnxRM eMovSv DebateOpinion___StyledCard-dZwepn cgdJna"
>
  <div
    className="sc-bdnxRM Tag__TagInner-bjwVBq Tag___StyledTagInner-cdSrrS bjKNvb hBLRKx cguwDa DebateOpinion___StyledTag-dFitVd brwjZN"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    title=""
  >
    <p
      className="sc-bdnxRM ffkNxr Tag___StyledText-hGgPZv bchNbO"
    >
      <span
        className="sc-bdnxRM dClQKr"
      >
        opinion.for
      </span>
    </p>
  </div>
  <div
    className="sc-bdnxRM DebateOpinion___StyledAppBox-iqiyXL bulKA-D ereNse"
  />
  <div
    className="sc-bdnxRM Flex___StyledAppBox-RSPpX dRGDei"
  >
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX bzrQcx cPNXGW"
    >
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX bCAVYp Avatar__AvatarInner-chaUKm grFDLb"
        style={
          Object {
            "background": "#2d867a",
            "color": undefined,
          }
        }
      >
        <img
          alt="Agui le penseur"
          className="sc-bdnxRM Avatar___StyledAppBox-jLrEWR gYudlT kOoGOC"
          src="<mock-value-for-field-\\"url\\">"
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX bHyrFO"
      >
        <p
          className="sc-bdnxRM kXjGxJ"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdnxRM fusnfN"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX bHyrFO cDRBxz"
    >
      <h4
        className="sc-bdnxRM gPFhMB"
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdnxRM isZYbz"
      >
        <div
          className=" ql-editor"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`<DebateOpinion /> when the query is on desktop should render with a read more link 1`] = `
<div
  className="sc-bdnxRM APGfF DebateOpinion___StyledCard-dZwepn cgdJna"
>
  <div
    className="sc-bdnxRM Tag__TagInner-bjwVBq Tag___StyledTagInner-cdSrrS bjKNvb hBLRKx cguwDa DebateOpinion___StyledTag-dFitVd brwjZN"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    title=""
  >
    <p
      className="sc-bdnxRM ffkNxr Tag___StyledText-hGgPZv bchNbO"
    >
      <span
        className="sc-bdnxRM dClQKr"
      >
        opinion.for
      </span>
    </p>
  </div>
  <div
    className="sc-bdnxRM Flex___StyledAppBox-RSPpX dRGDei"
  >
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX bzrQcx cPNXGW"
    >
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX bCAVYp Avatar__AvatarInner-chaUKm grFDLb"
        style={
          Object {
            "background": "#2d867a",
            "color": undefined,
          }
        }
      >
        <img
          alt="Agui le penseur"
          className="sc-bdnxRM Avatar___StyledAppBox-jLrEWR gYudlT kOoGOC"
          src="<mock-value-for-field-\\"url\\">"
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX bHyrFO"
      >
        <p
          className="sc-bdnxRM kXjGxJ"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdnxRM fusnfN"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX bHyrFO cDRBxz"
    >
      <h4
        className="sc-bdnxRM gPFhMB"
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdnxRM isZYbz"
      >
        <div
          className=" ql-editor"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`<DebateOpinion /> when the query is on mobile should render a FOR opinion 1`] = `
<div
  className="sc-bdnxRM eMovSv DebateOpinion___StyledCard-dZwepn cgdJna"
>
  <div
    className="sc-bdnxRM Tag__TagInner-bjwVBq Tag___StyledTagInner-cdSrrS bjKNvb hBLRKx cguwDa DebateOpinion___StyledTag-dFitVd brwjZN"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    title=""
  >
    <p
      className="sc-bdnxRM ffkNxr Tag___StyledText-hGgPZv bchNbO"
    >
      <span
        className="sc-bdnxRM dClQKr"
      >
        opinion.for
      </span>
    </p>
  </div>
  <div
    className="sc-bdnxRM DebateOpinion___StyledAppBox-iqiyXL bulKA-D ereNse"
  />
  <div
    className="sc-bdnxRM Flex___StyledAppBox-RSPpX dRGDei"
  >
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX bzrQcx cPNXGW"
    >
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX bCAVYp Avatar__AvatarInner-chaUKm grFDLb"
        style={
          Object {
            "background": "#2d867a",
            "color": undefined,
          }
        }
      >
        <img
          alt="Agui le penseur"
          className="sc-bdnxRM Avatar___StyledAppBox-jLrEWR gYudlT kOoGOC"
          src="<mock-value-for-field-\\"url\\">"
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX bHyrFO"
      >
        <p
          className="sc-bdnxRM kXjGxJ"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdnxRM fusnfN"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX bHyrFO cDRBxz"
    >
      <h4
        className="sc-bdnxRM gPFhMB"
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdnxRM isZYbz"
      >
        <div
          className=" ql-editor"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
      <button
        className="sc-bdnxRM Button__ButtonInner-dWPVNG bJBJyt kfdEqC DebateOpinion___StyledButton-eaGvMt iPqugS"
        onClick={[Function]}
        type="button"
      >
        capco.module.read_more
      </button>
    </div>
  </div>
</div>
`;

exports[`<DebateOpinion /> when the query is on mobile should render with a read more link 1`] = `
<div
  className="sc-bdnxRM APGfF DebateOpinion___StyledCard-dZwepn cgdJna"
>
  <div
    className="sc-bdnxRM Tag__TagInner-bjwVBq Tag___StyledTagInner-cdSrrS bjKNvb hBLRKx cguwDa DebateOpinion___StyledTag-dFitVd brwjZN"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    title=""
  >
    <p
      className="sc-bdnxRM ffkNxr Tag___StyledText-hGgPZv bchNbO"
    >
      <span
        className="sc-bdnxRM dClQKr"
      >
        opinion.for
      </span>
    </p>
  </div>
  <div
    className="sc-bdnxRM Flex___StyledAppBox-RSPpX dRGDei"
  >
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX bzrQcx cPNXGW"
    >
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX bCAVYp Avatar__AvatarInner-chaUKm grFDLb"
        style={
          Object {
            "background": "#2d867a",
            "color": undefined,
          }
        }
      >
        <img
          alt="Agui le penseur"
          className="sc-bdnxRM Avatar___StyledAppBox-jLrEWR gYudlT kOoGOC"
          src="<mock-value-for-field-\\"url\\">"
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX bHyrFO"
      >
        <p
          className="sc-bdnxRM kXjGxJ"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdnxRM fusnfN"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX bHyrFO cDRBxz"
    >
      <h4
        className="sc-bdnxRM gPFhMB"
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdnxRM isZYbz"
      >
        <div
          className=" ql-editor"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
      <button
        className="sc-bdnxRM Button__ButtonInner-dWPVNG bJBJyt kfdEqC DebateOpinion___StyledButton-eaGvMt iPqugS"
        onClick={[Function]}
        type="button"
      >
        capco.module.read_more
      </button>
    </div>
  </div>
</div>
`;
